Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9295

Using QGraphicsItem::setScale on a QGraphicsItem with flag ItemIgnoresTransformations results in wrong item movement

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.6.2, 5.6.1
    • Widgets: GraphicsView
    • None
    • Windows 7
    • 253b87180e0a6c5db0feaaed7e321139c4ff1643

      setScale() will somehow also have an effect when items are moved with the mouse via default handlers. For positive scale factors, the item will move less than it should, and vice versa. Scaling an item via setTransform() works properly. The documentation for the ItemIgnoresTransformations clearly states scaling should work, so I assume this is a bug.
      Code reproducing error is attached.

        1. setscale-movement-bug.cpp
          0.5 kB
          Thom Johansen
        2. setscale-movement-bug.cpp
          0.5 kB
          ederag
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bibr Andreas Aardal Hanssen
            preglow Thom Johansen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes