Moved item wouldn't follow mouse cursor when ItemIgnoresTransformations is set

Since the introduction of transform properties in QGraphicsItem,
QGraphicsItem::transform() is no longer enough to get the correct
transform of an item.

No auto-test as it involves mouse dragging.

Reviewed-by: Yoann
Task-number: QTBUG-9295
(cherry picked from commit 253b87180e0a6c5db0feaaed7e321139c4ff1643)